# 3D_Cellular_Automata

./: .gitignore  Cargo.toml  README.md
assets/shaders/: cell.wgsl
src/: cell_renderer.rs  cells_multithreaded.rs  fly_camera.rs  main.rs  multi_threading.rs  neighbours.rs  rotating_camera.rs  rule.rs  simulation.rs  utils.rs
src/cells/: cell_renderer.rs
src/shaders/: cell.wgsl
